Fix autocomplete not showing issues

--- a/src/app/common/autocomplete-input-text/autocomplete-input-text.component.scss
+++ b/src/app/common/autocomplete-input-text/autocomplete-input-text.component.scss
@@ -4,6 +4,7 @@
   .suggestions {
     position: absolute;
     display: none;
+    z-index: 900;
     flex-direction: column;
     overflow: auto;
     padding: 8px 0;
